# NeuroGrim

./: .dockerignore  .gitignore  .gitmodules  BEFORE-PUBLIC-RELEASE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PITCH-brain-dataflow.mmd  PITCH-overlay-vs-engine.mmd  PITCH.md  README.md  docker-compose.bearer.yml  docker-compose.yml  trust-budget.toml
deploy/webhook-sync/: Dockerfile  README.md  config.example.toml  pyproject.toml
deploy/webhook-sync/tests/: conftest.py  test_debounce.py  test_git_sync.py  test_idempotency.py  test_signature.py
deploy/webhook-sync/webhook_sync/: __init__.py  app.py  config.py  signature.py  storage.py  sync.py
motherbrain/: Cargo.toml
motherbrain/crates/motherbrain-a2a/: Cargo.toml
motherbrain/crates/motherbrain-a2a/src/: client.rs  envelope.rs  error.rs  lib.rs  server.rs  transport.rs
motherbrain/crates/motherbrain-a2a/tests/: mock_peer.rs
motherbrain/crates/motherbrain-cli/: Cargo.toml
motherbrain/crates/motherbrain-cli/src/: main.rs
motherbrain/crates/motherbrain-cli/tests/: a2a_cli.rs  cli_smoke.rs  dual_brain_pair.rs  three_way_brain.rs
motherbrain/crates/motherbrain-core/: Cargo.toml
motherbrain/crates/motherbrain-core/src/: agent_output.rs  awareness.rs  confidence.rs  correlation.rs  ecosystem.rs  governance.rs  lib.rs  registry.rs  scoring.rs  trajectory.rs
motherbrain/crates/motherbrain-ecosystem/: Cargo.toml
motherbrain/crates/motherbrain-ecosystem/examples/: stub_child_brain.rs
motherbrain/crates/motherbrain-ecosystem/src/: lib.rs
motherbrain/crates/motherbrain-ecosystem/tests/: contract.rs
motherbrain/crates/motherbrain-mcp/: Cargo.toml
motherbrain/crates/motherbrain-mcp/src/: client.rs  lib.rs  server.rs  transport.rs
motherbrain/crates/motherbrain-sensory/: Cargo.toml
motherbrain/crates/motherbrain-sensory/src/: code_quality.rs  coherence.rs  deploy_readiness.rs  git_health.rs  human_comms.rs  lib.rs  secret_refs.rs  security_standards.rs  test_results.rs
motherbrain/crates/motherbrain-sensory/tests/: schema_conformance.rs  sensor_behavior.rs
neurogrim/: Cargo.toml
neurogrim/.cargo/: config.toml
neurogrim/.config/: nextest.toml
neurogrim/crates/neurogrim-a2a/: Cargo.toml
neurogrim/crates/neurogrim-a2a/src/: agent_card.rs  client.rs  envelope.rs  federated_pattern.rs  lib.rs  server.rs  supply_chain_signal.rs  token_store.rs  transport.rs
neurogrim/crates/neurogrim-a2a/tests/: auth_bearer.rs  federated_pattern_loopback_e2e.rs  federated_pattern_protocol_behavior.rs  mock_peer.rs
neurogrim/crates/neurogrim-brokers/: Cargo.toml
neurogrim/crates/neurogrim-brokers/src/: broker.rs  capability.rs  catalog.rs  cold_store.rs  doc_broker.rs  extension.rs  frame.rs  governance.rs  host.rs  lib.rs  local_awareness_broker.rs  overlay.rs  pipeline.rs  rate_limit.rs  registry.rs  runner.rs  sensory.rs  sensory_extension_patterns.rs  sensory_queue.rs  skill_filter.rs  system_facts.rs  topology.rs  trace.rs  work_broker.rs  workflow.rs  workspace.rs  workspace_broker_v1.rs
neurogrim/crates/neurogrim-brokers/tests/: extension_registry_round_trip.rs  harness_end_to_end.rs  phase_d_integration.rs  sensor_byte_identity_pilot.rs
neurogrim/crates/neurogrim-cli/: Cargo.toml
neurogrim/crates/neurogrim-cli/data/: init-hook-script.sh
neurogrim/crates/neurogrim-cli/examples/: broker_demo_driver.rs
neurogrim/crates/neurogrim-cli/src/: agent-roles.defaults.yaml  diagnostics_layer.rs  main.rs  roles.rs  tracing_init.rs
neurogrim/crates/neurogrim-cli/tests/: a2a_cli.rs  cli_smoke.rs  context_overhead.rs  disposition_cli_behavior.rs  domain_calibration_cli.rs  domain_new_behavior.rs  dual_brain_pair.rs  federated_pattern_cli_behavior.rs  init_template_behavior.rs  methodology_drift.rs  three_way_brain.rs
neurogrim/crates/neurogrim-core/: Cargo.toml
neurogrim/crates/neurogrim-core/src/: agent_output.rs  awareness.rs  calibration_ledger.rs  confidence.rs  conformance.rs  correlation.rs  diagnostics_ledger.rs  ecosystem.rs  governance.rs  learning.rs  lib.rs  llm_backend.rs  metrics.rs  ports.rs  queue.rs  queue_backend.rs  queue_backend_conformance.rs  queue_config.rs  registry.rs  scoring.rs  scoring_source.rs  scoring_source_conformance.rs  sensor.rs  sensor_conformance.rs  skill_invocations.rs  test_runner.rs  test_runner_conformance.rs  trajectory.rs  types.rs
neurogrim/crates/neurogrim-dashboard/: Cargo.toml
neurogrim/crates/neurogrim-dashboard/bindings/: AgentCardExcerptDto.ts  ApprovalRequestView.ts  ApprovalResolutionView.ts  ApprovalsPageResponse.ts  BrainListItemDto.ts  BrainsListResponse.ts  ChangeOp.ts  ConfigFileResponse.ts  CreateCustomPageRequest.ts  CustomPageLayoutRequest.ts  CustomPageMutationResponse.ts  DashboardLayoutRequest.ts  DashboardLayoutResponse.ts  DashboardPagesConfig.ts  DeleteSecretResponse.ts  DomainDetailResponse.ts  DomainListItemDto.ts  DomainSignalDto.ts  DomainsListResponse.ts  ExplainTopicResponse.ts  FederationResponse.ts  FindingDto.ts  HatDto.ts  HatsResponse.ts  HealthResponse.ts  HistoryPointDto.ts  (+39 more)
neurogrim/crates/neurogrim-ecosystem/: Cargo.toml
neurogrim/crates/neurogrim-mcp/: Cargo.toml
neurogrim/crates/neurogrim-pentest/: Cargo.toml  DISCLAIMER.md  Dockerfile
neurogrim/crates/neurogrim-sdk/: Cargo.toml  README.md  SEMVER-OVERRIDE.md
neurogrim/crates/neurogrim-secrets/: Cargo.toml
neurogrim/crates/neurogrim-sensory/: Cargo.toml
neurogrim/examples/queue-backend-memory/: Cargo.toml  README.md
neurogrim/examples/scoring-source-prom/: Cargo.toml  README.md
neurogrim/examples/sensor-constant-score/: Cargo.toml  README.md
neurogrim/examples/sensor-readme-quality/: Cargo.toml  README.md
neurogrim/tests/supply-chain-fixtures/: README.md
neurogrim/xtask/: Cargo.toml
neurogrim/xtask/src/: main.rs  sca_check.rs  schema_drift_check.rs
sdk-python/: README.md  pyproject.toml  requirements-lock.txt
sdk-python/examples/jira_health/: main.py
sdk-python/lsp_brains/: __init__.py  mcp.py  schemas.py  secret_provider.py  sensory.py
sdk-python/tests/: test_jira_example.py  test_schemas.py  test_secret_provider.py  test_sensory.py
(+716 files in other folders)
