[workspace]
resolver = "2"
members = [
    "crates/neurogrim-core",
    "crates/neurogrim-sensory",
    "crates/neurogrim-mcp",
    "crates/neurogrim-a2a",
    "crates/neurogrim-ecosystem",
    "crates/neurogrim-cli",
]

[workspace.package]
version = "3.0.0-rc.1"
edition = "2021"
authors = ["Keenan Hoffman"]
license = "MIT"
description = "NeuroGrim: LSP Brains reference implementation"
repository = "https://github.com/KeenanHoffman/NeuroGrim"
homepage = "https://github.com/KeenanHoffman/NeuroGrim"
documentation = "https://github.com/KeenanHoffman/NeuroGrim#readme"
readme = "../README.md"
keywords = ["lsp-brains", "agent", "mcp", "devops", "observability"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Terminal output
colored = "2"

# MCP protocol
rmcp = { version = "0.8", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
tiktoken-rs = "0.6"

# URL parsing / validation (shared across a2a + ecosystem)
url = { version = "2", features = ["serde"] }

# Workspace crates
# Both `path` and `version` are required for `cargo publish` to resolve
# intra-workspace deps from crates.io. Keep versions in lock-step with
# `workspace.package.version` above.
neurogrim-core = { path = "crates/neurogrim-core", version = "3.0.0-rc.1" }
neurogrim-sensory = { path = "crates/neurogrim-sensory", version = "3.0.0-rc.1" }
neurogrim-mcp = { path = "crates/neurogrim-mcp", version = "3.0.0-rc.1" }
neurogrim-a2a = { path = "crates/neurogrim-a2a", version = "3.0.0-rc.1" }
neurogrim-ecosystem = { path = "crates/neurogrim-ecosystem", version = "3.0.0-rc.1" }
