[workspace]
resolver = "2"
members = [
    "crates/neurogrim-core",
    "crates/neurogrim-sensory",
    "crates/neurogrim-mcp",
    "crates/neurogrim-a2a",
    "crates/neurogrim-ecosystem",
    "crates/neurogrim-dashboard",
    "crates/neurogrim-cli",
    "xtask",
]

[workspace.package]
version = "3.3.0"
edition = "2021"
authors = ["Keenan Hoffman"]
license = "MIT"
description = "NeuroGrim: LSP Brains reference implementation"
repository = "https://github.com/KeenanHoffman/NeuroGrim"
homepage = "https://github.com/KeenanHoffman/NeuroGrim"
documentation = "https://github.com/KeenanHoffman/NeuroGrim#readme"
readme = "../README.md"
keywords = ["lsp-brains", "agent", "mcp", "devops", "observability"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Terminal output
colored = "2"

# MCP protocol
rmcp = { version = "0.8", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
tiktoken-rs = "0.6"

# URL parsing / validation (shared across a2a + ecosystem)
url = { version = "2", features = ["serde"] }

# v3.4 dashboard (neurogrim-dashboard crate):
# - `axum` for HTTP server (already used in a2a + cli dev-deps; promoting to runtime)
# - `tower-http` for static-file serving + middleware
# - `rust-embed` for compile-time embedding of frontend/dist/ assets
# - `ts-rs` for generating TypeScript types from Rust structs
# - `notify` for filesystem watching (CMDB/registry → SSE updates)
# - `webbrowser` for cross-platform browser launch with fallback
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
ts-rs = { version = "10", features = ["chrono-impl", "no-serde-warnings"] }
notify = "6"
webbrowser = "1"

# Supply-chain SCA (E-SC-2):
# - `cargo-lock` (note: hyphen on crates.io; imported as `cargo_lock` in
#   Rust) is RustSec-maintained; parses Cargo.lock V1..V4 natively with a
#   tiny trust surface. Pinned to major "11" (compatible-semver). Avoids
#   us ever shelling out to `cargo audit` or `trivy` for SCA.
# - `toml` is needed in `neurogrim-sensory` to parse the RustSec
#   advisory-db TOML frontmatter (vendored at `vendor/rustsec-advisory-db/`).
# - `semver` is RustLang-team maintained; provides VersionReq for
#   matching advisory version-range strings against concrete versions
#   (Step 6 rustsec.rs). Already transitively in our tree via cargo-lock;
#   this declaration just makes the direct `use` legal.
cargo-lock = "11"
toml = "0.8"
semver = "1"

# Supply-chain SCA E-SC-4 (npm/yarn/pnpm):
# - `yarn-lock-parser` parses Yarn 1.x (Classic) AND Yarn 2+ (Berry)
#   lockfile formats. Yarn 1.x is a custom space-indented text
#   format that's hostile to hand-rolling cleanly; this crate uses
#   `nom` and is the smallest credible production option (170k+
#   downloads, recent updates). v0.x — pin to compatible-semver
#   to absorb minor fixes. SMALLEST-ATTESTED CRATE in our trust
#   chain; documented in audit/TOOL-TRUST-NOTES.md.
yarn-lock-parser = "0.10"

# Supply-chain vigilance E-SC-5 (Layer 2 deep-signal sensors):
# - `tar` (alexcrichton-maintained, RustSec-tracked) for safe tarball
#   extraction in the exfil_indicator sensor. Used with explicit
#   `set_preserve_permissions(false)` + path-traversal guards.
# - `flate2` (alexcrichton-maintained) for gunzip the registry
#   tarballs (.tar.gz / .tgz). RustSec-tracked, well-audited.
# Both are opt-in: exfil_indicator only activates with
# NEUROGRIM_VIGILANCE_EXFIL=1; binary_reproducibility only with
# NEUROGRIM_VIGILANCE_REPRO=1. Documented in audit/TOOL-TRUST-NOTES.md.
tar = "0.4"
flate2 = "1"

# Workspace crates
# Both `path` and `version` are required for `cargo publish` to resolve
# intra-workspace deps from crates.io. Keep versions in lock-step with
# `workspace.package.version` above.
neurogrim-core = { path = "crates/neurogrim-core", version = "3.3.0" }
neurogrim-sensory = { path = "crates/neurogrim-sensory", version = "3.3.0" }
neurogrim-mcp = { path = "crates/neurogrim-mcp", version = "3.3.0" }
neurogrim-a2a = { path = "crates/neurogrim-a2a", version = "3.3.0" }
neurogrim-ecosystem = { path = "crates/neurogrim-ecosystem", version = "3.3.0" }
neurogrim-dashboard = { path = "crates/neurogrim-dashboard", version = "3.3.0" }
