[workspace]
resolver = "2"
members = [
    "crates/neurogrim-core",
    "crates/neurogrim-sensory",
    "crates/neurogrim-mcp",
    "crates/neurogrim-a2a",
    "crates/neurogrim-ecosystem",
    "crates/neurogrim-dashboard",
    "crates/neurogrim-cli",
    "crates/neurogrim-secrets",
    # S*-T MVP (broker harness for Claude Code, 2026-06-24+) —
    # implements ~12-of-38 building blocks from BROKER-INTERNALS.md
    # spec as the "useful MVP" broker substrate. See plan at
    # C:/Users/koff0/.claude/plans/for-your-new-session-modular-pretzel.md
    # for the full S*-T Wave 0-5 sequence. Defers Workflow Engine,
    # Skill Filter, Frame stack, Topology Broker, and the Phase 8
    # additions until S1-T.
    "crates/neurogrim-brokers",
    # v2-Feature 9 (NG-PENTEST, 2026-05-09) — optional pen-testing
    # harness. Workspace member so `cargo test --workspace` exercises
    # it, but NOT a default dependency of any other crate. Operators
    # opt in via explicit `dep:neurogrim-pentest` feature wiring;
    # `neurogrim-mcp`'s `pentest` feature flag (Phase 2) gates the
    # tool surface that exposes the runtime functionality.
    "crates/neurogrim-pentest",
    # V5-SDK-1 (2026-05-02) — `neurogrim-sdk` thin re-export crate
    # exposing Theme B trait surfaces + `Transport` + `SecretBackend`
    # as a stable plugin-author SDK. Versioned independently from
    # `neurogrim-core` (`0.1.0` initial; semver gate in CI prevents
    # breaking changes without explicit major bump).
    "crates/neurogrim-sdk",
    # V5-MOD-1 Phase 6 (2026-05-02) — out-of-tree example crate
    # demonstrating a third-party `ScoringSource` impl that passes
    # the Phase 5 conformance suite. Lives outside `crates/`
    # because it's not a published production crate; included as a
    # workspace member so `cargo test --workspace` exercises it.
    "examples/scoring-source-prom",
    # V5-MOD-2 Phase 6 (2026-05-02) — out-of-tree example crate
    # demonstrating a third-party `Sensor` impl that passes the
    # Phase 5 conformance suite. README-quality scoring: pure FS
    # (no env vars, no network) — paired with `scoring-source-prom`
    # (HTTP-fetch) gives the V5-SDK two complementary patterns.
    "examples/sensor-readme-quality",
    # V5-MOD-3 Phase 5 (2026-05-02) — out-of-tree example crate
    # demonstrating a third-party `QueueBackend` impl that passes
    # the Phase 4 conformance suite. In-memory ring buffer with
    # full ack semantics: pure logic, zero deps beyond
    # `neurogrim-core`. Pairs with V5-MOD-1's HTTP-fetch and
    # V5-MOD-2's FS-read examples — three complementary V5-SDK
    # patterns covering network, file-system, and pure-memory.
    "examples/queue-backend-memory",
    # V5-SDK-1 Phase 2 (2026-05-02) — V5-SDK reference example.
    # Toy `ConstantScoreSensor` that always reports score=42;
    # demonstrates the smallest-possible third-party `Sensor`
    # implementation depending only on `neurogrim-sdk` (NOT
    # `neurogrim-core`). Proves the SDK surface is reachable
    # for the most basic case. For richer patterns see the
    # V5-MOD-1/2/3 example crates above.
    "examples/sensor-constant-score",
    "xtask",
]

[workspace.package]
# v5.0.0 (V5-MOD-1 Phase 0, 2026-05-02): semver-major bump for the
# `ScoringSource` rename. The struct in registry.rs is now
# `ScoringSourceConfig`; the unqualified name `ScoringSource` is
# reserved for the trait introduced in V5-MOD-1 Phase 1.
# Downstream consumers importing `neurogrim_core::registry::ScoringSource`
# must update to `ScoringSourceConfig`. Operator pin 2026-05-02.
version = "5.0.0"
edition = "2021"
authors = ["Keenan Hoffman"]
license = "MIT"
description = "NeuroGrim: LSP Brains reference implementation"
repository = "https://github.com/KeenanHoffman/NeuroGrim"
homepage = "https://github.com/KeenanHoffman/NeuroGrim"
documentation = "https://github.com/KeenanHoffman/NeuroGrim#readme"
readme = "../README.md"
keywords = ["lsp-brains", "agent", "mcp", "devops", "observability"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
# V5-MOD-1 Phase 0 (2026-05-02) — promoted from per-crate dep in
# neurogrim-a2a so neurogrim-core's ScoringSource trait can use the
# same macro convention.
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Terminal output
colored = "2"

# MCP protocol
rmcp = { version = "0.8", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
tiktoken-rs = "0.6"

# URL parsing / validation (shared across a2a + ecosystem)
url = { version = "2", features = ["serde"] }

# v3.5.0: per-project random port allocator (`neurogrim-core::ports`).
# Pinned to 0.8.x for `SeedableRng::from_entropy` (renamed in 0.9).
rand = "0.8"

# v3.4 dashboard (neurogrim-dashboard crate):
# - `axum` for HTTP server (already used in a2a + cli dev-deps; promoting to runtime)
# - `tower-http` for static-file serving + middleware
# - `rust-embed` for compile-time embedding of frontend/dist/ assets
# - `ts-rs` for generating TypeScript types from Rust structs
# - `notify` for filesystem watching (CMDB/registry → SSE updates)
# - `webbrowser` for cross-platform browser launch with fallback
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
ts-rs = { version = "10", features = ["chrono-impl", "no-serde-warnings", "serde-json-impl"] }
notify = "6"
webbrowser = "1"

# Supply-chain SCA (E-SC-2):
# - `cargo-lock` (note: hyphen on crates.io; imported as `cargo_lock` in
#   Rust) is RustSec-maintained; parses Cargo.lock V1..V4 natively with a
#   tiny trust surface. Pinned to major "11" (compatible-semver). Avoids
#   us ever shelling out to `cargo audit` or `trivy` for SCA.
# - `toml` is needed in `neurogrim-sensory` to parse the RustSec
#   advisory-db TOML frontmatter (vendored at `vendor/rustsec-advisory-db/`).
# - `semver` is RustLang-team maintained; provides VersionReq for
#   matching advisory version-range strings against concrete versions
#   (Step 6 rustsec.rs). Already transitively in our tree via cargo-lock;
#   this declaration just makes the direct `use` legal.
cargo-lock = "11"
toml = "0.8"
semver = "1"

# Supply-chain SCA E-SC-4 (npm/yarn/pnpm):
# - `yarn-lock-parser` parses Yarn 1.x (Classic) AND Yarn 2+ (Berry)
#   lockfile formats. Yarn 1.x is a custom space-indented text
#   format that's hostile to hand-rolling cleanly; this crate uses
#   `nom` and is the smallest credible production option (170k+
#   downloads, recent updates). v0.x — pin to compatible-semver
#   to absorb minor fixes. SMALLEST-ATTESTED CRATE in our trust
#   chain; documented in audit/TOOL-TRUST-NOTES.md.
yarn-lock-parser = "0.10"

# Supply-chain vigilance E-SC-5 (Layer 2 deep-signal sensors):
# - `tar` (alexcrichton-maintained, RustSec-tracked) for safe tarball
#   extraction in the exfil_indicator sensor. Used with explicit
#   `set_preserve_permissions(false)` + path-traversal guards.
# - `flate2` (alexcrichton-maintained) for gunzip the registry
#   tarballs (.tar.gz / .tgz). RustSec-tracked, well-audited.
# Both are opt-in: exfil_indicator only activates with
# NEUROGRIM_VIGILANCE_EXFIL=1; binary_reproducibility only with
# NEUROGRIM_VIGILANCE_REPRO=1. Documented in audit/TOOL-TRUST-NOTES.md.
tar = "0.4"
flate2 = "1"

# Workspace crates
# Both `path` and `version` are required for `cargo publish` to resolve
# intra-workspace deps from crates.io. Keep versions in lock-step with
# `workspace.package.version` above.
neurogrim-core = { path = "crates/neurogrim-core", version = "5.0.0" }
# V5-MOD-2 Phase 4 (2026-05-02) — `default-features = false` here
# is required so cli's local `default-features = false` override
# actually takes effect. Without it, Cargo warns
# "`default-features` is ignored ... since `default-features` was
# not specified for `workspace.dependencies.neurogrim-sensory`"
# and silently keeps all defaults active. cli is the only consumer
# of neurogrim-sensory; cli's [features] section explicitly
# activates per-sensor pass-through, so the workspace-level
# default-off is the right policy.
neurogrim-sensory = { path = "crates/neurogrim-sensory", version = "5.0.0", default-features = false }
neurogrim-secrets = { path = "crates/neurogrim-secrets", version = "5.0.0" }
neurogrim-mcp = { path = "crates/neurogrim-mcp", version = "5.0.0" }
neurogrim-a2a = { path = "crates/neurogrim-a2a", version = "5.0.0" }
neurogrim-ecosystem = { path = "crates/neurogrim-ecosystem", version = "5.0.0" }
neurogrim-dashboard = { path = "crates/neurogrim-dashboard", version = "5.0.0" }
# S*-T MVP broker harness (2026-06-24+) — see workspace member comment above.
neurogrim-brokers = { path = "crates/neurogrim-brokers", version = "5.0.0" }
