[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsp-brains"
version = "0.1.0"
description = "Python SDK for writing LSP Brains sensory tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["lsp-brains", "sensory", "mcp", "devops", "health-scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/keenanHoffmanSparq/Moth-er-Br-AI-n"
Specification = "https://github.com/keenanHoffmanSparq/LSP-Brains"

[tool.hatch.build.targets.wheel]
packages = ["lsp_brains"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
