[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurogrim-webhook-sync"
version = "0.1.0"
description = "Signed-push → git-sync sidecar for NeuroGrim agent workspaces (S6-DB-5 remote-agent topology, Phase 3)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Keenan Hoffman" }]
dependencies = [
  "fastapi>=0.115,<0.117",
  "uvicorn>=0.30,<0.40",
  # tomllib is stdlib in 3.11+; tomli for 3.10 compatibility
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "httpx>=0.27,<0.29",  # for fastapi's TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["webhook_sync"]
