[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false
description = "Workspace build orchestration tasks (cargo xtask)"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
walkdir = "2"
