[package]
name = "motherbrain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LSP Brains core scoring engine — pure logic, zero I/O"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
proptest = { workspace = true }
