[package]
name = "motherbrain-ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Fractal composition dispatch — invokes child Brains via subprocess or A2A (spec §9 + §13)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
motherbrain-core = { workspace = true }
motherbrain-a2a = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum = "0.7"
# `default-features = false` + `rustls-tls` — keep the dev-dep in lock-step
# with the runtime TLS choice in motherbrain-a2a (S6-DB-5).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
