[package]
name = "motherbrain-sensory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in sensory tool implementations for MotherBrain"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
motherbrain-core = { workspace = true }
