[package]
name = "motherbrain-sensory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in sensory tool implementations for MotherBrain"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
motherbrain-core = { workspace = true }

[dev-dependencies]
# §3.8 Testing Discipline — validate CMDB envelope output against the
# canonical cmdb-envelope-v1 JSON Schema at integration-test time.
# Full JSON Schema (draft-07) validator; same contract the Python SDK
# test enforces.
jsonschema = "0.17"
# Tier-A sensor behavioral fixtures — each analyze_* runs against a
# programmatically populated TempDir; tempfile handles cleanup.
tempfile = "3"
tokio = { workspace = true }
