[package]
name = "neurogrim-a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "A2A (Agent2Agent) peer protocol for NeuroGrim — Brain-to-Brain communication (fractal composition + dual brain)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
# Server (HTTP + SSE) — S6-DB-1
axum = "0.7"
tower = "0.5"
# Client (HTTP + streaming) — S6-DB-1 / S6-DB-5.
# `default-features = false` + `rustls-tls-native-roots` keeps the
# pure-Rust TLS stack (no OpenSSL / libssl dep in the Docker image) but
# reads the root certificates from the OS trust store instead of the
# pre-baked Mozilla webpki-roots bundle. This unblocks two scenarios:
# (1) enterprise deployments behind corporate CAs, and (2) the CEO
# template / Phase 2+ dev stack where Caddy issues certs from its
# internal CA — operators import the Caddy root into the OS store once
# and every subsequent Rust client call trusts it. Without this flag,
# `neurogrim score` against https://*.localhost would fail at the TLS
# handshake even though curl succeeds.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
# Stream trait + URL parsing for transport abstraction
futures = "0.3"
url = { version = "2", features = ["serde"] }
async-trait = { workspace = true }
neurogrim-core = { workspace = true }
# Bearer-auth token store (Phase 1 of remote-agent topology):
# rusqlite for persistence; sha2 + subtle for hashed, constant-time
# comparison; base32 for token encoding; rand for CSPRNG token bodies.
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
subtle = "2.5"
base32 = "0.5"
rand = "0.8"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
