[package]
name = "neurogrim-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "NeuroGrim CLI — LSP Brains scoring engine and MCP server binary"

[[bin]]
name = "neurogrim"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
neurogrim-core = { workspace = true, features = ["sqlite"] }
neurogrim-sensory = { workspace = true }
neurogrim-mcp = { workspace = true }
neurogrim-a2a = { workspace = true }
neurogrim-ecosystem = { workspace = true }
# v4.2 S14-S-4.5 — secrets crate for `neurogrim secrets tls-cert`
# subcommands (cert generation, persistence, fingerprinting).
neurogrim-secrets = { workspace = true }
# v3.4 dashboard — `neurogrim ui` invokes the dashboard server here.
neurogrim-dashboard = { workspace = true }
webbrowser = { workspace = true }
url = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
# v3.1 E-V31-C C1: TOML loader for hat-narration templates. Templates
# bundled at compile time via include_str!; toml crate parses at runtime.
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
# `default-features = false` + `rustls-tls-native-roots` — keep the
# dev-dep in lock-step with the runtime TLS choice in neurogrim-a2a.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
axum = "0.7"
# Tokenizer for B-09 DP-4 / B-10 Phase 1 context-overhead benchmarks.
# Uses cl100k_base (GPT-4 / Claude family baseline — directionally
# accurate, ±10-20% vs. Claude's actual tokenizer for deltas).
tiktoken-rs = { workspace = true }
